apps/observable/tekton-pipeline.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
