apps/observable/observable-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: observable-service
  namespace: observable
  labels:
    app: observable
    component: dashboard
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 3000
    protocol: TCP
    name: web
  selector:
    app: observable
    component: dashboard
